--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <div id="hyo"></div>
 
-<script src="lib/index.js"></script>
+<script src="dist/hyo.js"></script>
 <script>
 var hyo = new Hyo('hyo');
 var data = {
